tests/snapshots/examples_fixtures/aoc__2025__aoc_day10_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day10_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_part2.flx:125:20
    |
125 |         let left = slice(arr, 0, idx)
    |                    ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day10_part2.flx:126:21
    |
126 |         let right = slice(arr, idx + 1, len(arr))
    |                     ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:178:50
    |
178 |         parse_buttons_rec(line, close + 1, stop, push(acc, btn))
    |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:291:35
    |
291 |     else { div_row(row, d, i + 1, push(acc, int_at(row, i) / d)) }
    |                                   ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:307:35
    |
307 |     else { negate_row(row, i + 1, push(acc, 0 - int_at(row, i))) }
    |                                   ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:323:43
    |
323 |         combine_rows(a, fa, b, fb, i + 1, push(acc, v))
    |                                           ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:343:9
    |
343 |         push(acc, int_at(target, pos))
    |         ^^^^

Hint:
  Define it first: let push = ...;

Help:
  Did you mean `pos`?


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:355:60
    |
355 |         build_matrix(buttons, target, pos + 1, npos, nbtn, push(acc, row))
    |                                                            ^^^^

Hint:
  Define it first: let push = ...;

Help:
  Did you mean `pos`?


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:445:58
    |
445 |     ge_step(mat3, nrows, nbtn, cur_row + 1, cur_col + 1, push(pivot_cols, cur_col))
    |                                                          ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:497:50
    |
497 |         get_free_cols(nbtn, pivot_cols, col + 1, push(acc, col))
    |                                                  ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day10_part2.flx:701:24
    |
701 |         let new_vals = push(free_vals, v)
    |                        ^^^^

Hint:
  Define it first: let push = ...;


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day10_part2.flx:752:21
    |
752 | let machine_lines = [trim(line) | line <- lines, trim(line) != ""]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |                     ---------------------------------------------- parameter 1 has type `Array<String>`

    |                     ---------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.

Found 12 errors.
== stdout ==
<not executed>
